Add reading experience features
- Filter out articles without meaningful titles
- Add left/right arrow navigation between articles
- Add keyboard navigation (← → ESC)
- Add infinite scroll with next article preview
- Add Fastify server with API endpoints
- Add AI article generation with Qwen support

--- a/package.json
+++ b/package.json
@@ -4,9 +4,13 @@
   "description": "Readmoo 雜誌爬蟲",
   "type": "module",
   "scripts": {
-    "crawl": "node crawler.js"
+    "crawl": "node crawler.js",
+    "generate": "node generate.js",
+    "dev": "node server.js"
   },
   "dependencies": {
+    "fastify": "^5.7.1",
+    "meei": "file:c:/dev/meei/nodejs",
     "puppeteer": "^23.0.0"
   }
 }
